Add generated Swagger Python flask code and README for CDR index
